[project]
name = "mmb-network-node"
version = "0.1.0"
description = ""
authors = [
    {name = "Lee Min Waan",email = "100744636+plsgivemeachane@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "mmb-layer0 (>=1.0.3)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false